--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Product</a> 
+            <a href="#">Plans</a> 
+            <a href="#">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
